--- a/source/style/common/common.scss
+++ b/source/style/common/common.scss
@@ -4,8 +4,6 @@
 }
 html,body{
   height: 100%;
-  min-height: 500px;
-  min-width: 800px;
   font-size: 2vmin;
   position: relative;
   font-family: 'Tahoma Regular', Tahoma, sans-serif;
@@ -14,7 +12,7 @@ html,body{
   @include phones{
     min-height: 480px;
     min-width: 320px;
-    font-size: 3vmin;
+    font-size: 2vh;
     line-height: 2em;
   }
 }
